fix salt attestation run command-line and default numeric options xygeni/tech-support#176